--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
@@ -13,11 +13,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
-  intl: ^0.16.1
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
-  cupertino_icons: ^1.0.2
+  provider: ^6.0.2
+  intl: ^0.17.0
+  http: ^0.13.4
+  shared_preferences: ^2.0.13
+  shared_preferences_platform_interface: ^2.0.0
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -26,8 +27,6 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
-
   uses-material-design: true
-    assets:
-    - assets/images/product-placeholder.png
-
+  assets:
+    - asset/images/
