--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.0.13
   shared_preferences_platform_interface: ^2.0.0
   cupertino_icons: ^1.0.4
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
